--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     , "node-schedule":">0.0.1"
     , "async":">0.0.1"
     , "node.io":">0.0.1"
+    , "express":">0.0.1"
     , "mediaamp-data":"git+ssh://git@github.com:MediaProjectAmp/MediaAmp-Models.git#Master"
     }
 }
