--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     , "async":">0.0.1"
     , "node.io":">0.0.1"
     , "express":">0.0.1"
+    ,"everyauth":">0.0.1"
     , "mediaamp-data":"git+ssh://git@github.com:MediaProjectAmp/MediaAmp-Models.git"
     }
 }
