--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     , "ntwitter":">0.0.1"
     , "redis":">0.0.1"
     , "ejs":">0.0.1"
+    , "jade":">0.0.1"
     , "csv":">0.0.1"
     , "mhash":">0.0.1"
     , "winston":">0.0.1"
