--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     , "express":">0.0.1"
     ,"everyauth":">0.0.1"
     , "mediaamp-data":"git+ssh://git@github.com:MediaProjectAmp/MediaAmp-Models.git"
+    , "jsdom":">0.0.1"
+    , "jquery":">0.0.1"
     }
 }
