--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express":">0.0.1",
     "everyauth":">0.0.1",
     "mediaamp-data":"git+ssh://git@github.com:MediaProjectAmp/MediaAmp-Models.git",
+    "mongoosastic":"git+ssh://git@github.com:phillro/mongoosastic.git",
     "jsdom":">0.0.1",
     "jquery":">0.0.1",
     "md5":">0.0.1",
